[package]
name = "ron-config"
version = "0.1.0"
edition = "2021"
description = "A library for reading config files"
repository = "https://github.com/Azkarell/ron_config"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7.0"
serde = "1.0.136"
glob = "0.3.0"
